--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       	 		  <label class="label_2" for="month">Expiration Date</label>
       	   <br>
       					 <select name="month" class="select_1" placeholder="month" >
+      					 	<option value="month" selected disabled>Month</option>
       	 					<option value="січень">січень</option>
       	 						 <option value="лютий">лютий</option>
       	 	  				  <option value="грудень">грудень</option>
@@ -52,6 +53,7 @@
       	 	
       				 </select>
 					<select name="year" class="select_2">
+						<option value="year" selected disabled>Year</option>
       	   				<option value="2018">2018 </option>
       	   				<option value="2019"> 2019</option>
       	   				<option value="2020"> 2020</option>
@@ -75,7 +77,7 @@
 	<div class="foot_1">
 		<button  class="button_1" name="submit"> <b> PAY<b></button>
 	</div>
-	<div class="last1_text">  Cancel order </div>
+	<button type="reset" value="reset"  class="last1_text">  Cancel order </button>
 </div>
 
 
