--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-	<div class="box_1">  
 		<img  class="img1" src="web/img/fon2.png">
+	<div class="box_1">  
+	
 	
 		<div class="box_2">	
 			<div class="head_2"> 
@@ -28,8 +29,9 @@
 			<div class="forma_2">
 				
    			 <div class="username">
+   			 	<form action="w" class="login">
       			  <label class="label_1" for="uname">Credit card number</label> <br>
-      			  <input class="input_first" type="number" id="uname" name="uname" required
+      			  <input class="input_first" type="text" id="uname" name="uname" required maxlength="12" 
            		   placeholder=" введіть  номер картки " />
       	  <span class="validity"></span>
 		 <div class="forma_3"> 
@@ -78,6 +80,7 @@
 		<button  class="button_1" name="submit"> <b> PAY <b></button>
 	</div>
 	<button type="reset" value="reset"  class="last1_text">  Cancel order </button>
+</form>
 </div>
 
 
